# LLM-Based-Sentiment-Analysis

./: .gitignore  README.md  get_models.py  pyproject.toml
Q0/: EDA.ipynb
Q1/: Q1_BoW.ipynb  Q1_char_tfidf.ipynb  Q1_word_tfidf.ipynb
Q1/functions/: eval_utils.py  tune_pipeline.py
Q2/: Q2_BoW.ipynb  Q2_Word.ipynb  Q2_char_tfidf.ipynb  Q2_mlp_bert.ipynb
Q2/functions/: mlp_utils.py
Q4/: q4_gemini_eval.py
Q7/: Q7_mlp_bert lora.ipynb
Q7/functions/: eval_utils.py
docs/: Report.aux  Report.fdb_latexmk  Report.fls  Report.tex
docs/fr/: Report.aux  Report.fdb_latexmk  Report.fls
docs/fr/sections/: Conclusion.tex  Introduction.tex  Q0.tex  Q1.tex  Q2.tex  Q3.tex  Q4.tex  Q5.tex  Q6.tex  Q7.tex
docs/sections/: Q1.tex  Q7.tex
outputs/: Gaussian_NB_BoW_best.joblib  Gaussian_NB_BoW_tuning_report.csv  Logistic_Reg_BoW_best.joblib  Logistic_Reg_BoW_tuning_report.csv  Multinomial_NB_BoW_best.joblib  Multinomial_NB_BoW_tuning_report.csv  RandomForest_Char_tuning_report.csv  SVM_Reg_BoW_best.joblib  SVM_Reg_BoW_tuning_report.csv
scripts/: estimate_grid_time.py  evaluate_all.py
