[project]
name = "llm-based-sentiment-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Santiago23florido",email = "sanflogom@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "torch (>=2.9.1,<3.0.0)",
    "transformers (>=4.57.6,<5.0.0)",
    "kagglehub (>=0.4.0,<0.5.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "jupyterlab-widgets (==3.0.15)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
